assets/css/main.css
/* ... */
  
  @keyframes tada {
	0% {
	  -webkit-transform: scale(1);
	  -ms-transform: scale(1);
	  transform: scale(1);
	}
  
	10%, 20% {
	  -webkit-transform: scale(.9) rotate(-8deg);
	  -ms-transform: scale(.9) rotate(-8deg);
	  transform: scale(.9) rotate(-8deg);
	}
  
	30%, 50%, 70% {
	  -webkit-transform: scale(1.3) rotate(8deg);
	  -ms-transform: scale(1.3) rotate(8deg);
	  transform: scale(1.3) rotate(8deg);
	}
  
	40%, 60% {
	  -webkit-transform: scale(1.3) rotate(-8deg);
	  -ms-transform: scale(1.3) rotate(-8deg);
	  transform: scale(1.3) rotate(-8deg);
	}
  
	80% {
	  -webkit-transform: scale(1) rotate(0);
	  -ms-transform: scale(1) rotate(0);
	  transform: scale(1) rotate(0);
	}
  }
  
  .faa-tada.animated,
  .faa-tada.animated-hover:hover,
  .faa-parent.animated-hover:hover > .faa-tada {
	-webkit-animation: tada 2s linear infinite;
	animation: tada 2s linear infinite;
  }
  
  /* PASSING */
  
  @-webkit-keyframes passing {
	0% {
	  -webkit-transform: translateX(-50%);
	  transform: translateX(-50%);
	  opacity: 0;
	}
  
	50% {
	  -webkit-transform: translateX(0%);
	  transform: translateX(0%);
	  opacity: 1;
	}
  
	100% {
	  -webkit-transform: translateX(50%);
	  transform: translateX(50%);
	  opacity: 0;
	}
  }
  
  @keyframes passing {
	0% {
	  -webkit-transform: translateX(-50%);
	  -ms-transform: translateX(-50%);
	  transform: translateX(-50%);
	  opacity: 0;
	}
  
	50% {
	  -webkit-transform: translateX(0%);
	  -ms-transform: translateX(0%);
	  transform: translateX(0%);
	  opacity: 1;
	}
  
	100% {
	  -webkit-transform: translateX(50%);
	  -ms-transform: translateX(50%);
	  transform: translateX(50%);
	  opacity: 0;
	}
  }
  
  .faa-passing.animated,
  .faa-passing.animated-hover:hover,
  .faa-parent.animated-hover:hover > .faa-passing {
	-webkit-animation: passing 3s linear infinite;
	animation: passing 3s linear infinite;
  }
  
  /* WAVE */
  
  @-webkit-keyframes burst {
	0% {
	  opacity: .6;
	}
  
	50% {
	  -webkit-transform: scale(1.8);
	  transform: scale(1.8);
	  opacity: 0;
	}
  
	100% {
	  opacity: 0;
	}
  }
  
  @keyframes burst {
	0% {
	  opacity: .6;
	}
  
	50% {
	  -webkit-transform: scale(1.8);
	  -ms-transform: scale(1.8);
	  transform: scale(1.8);
	  opacity: 0;
	}
  
	100% {
	  opacity: 0;
	}
  }
  
  .faa-burst.animated,
  .faa-burst.animated-hover:hover,
  .faa-parent.animated-hover:hover > .faa-burst {
	-webkit-animation: burst 3s infinite linear;
	animation: burst 3s infinite linear;
  }

  #gallery {
	padding-top: 40px;
  }
  @media screen and (min-width: 991px) {
	#gallery {
	  padding: 60px 30px 0 30px;
	}
  }
  
  .img-wrapper {
	position: relative;
	margin-top: 15px;
  }
  .img-wrapper img {
	width: 100%;
  }
  
  .img-overlay {
	background: rgba(0, 0, 0, 0.7);
	width: 100%;
	height: 100%;
	position: absolute;
	top: 0;
	left: 0;
	display: flex;
	justify-content: center;
	align-items: center;
	opacity: 0;
  }
  .img-overlay i {
	color: #fff;
	font-size: 2em;
  }
  
  #overlay {
	background: rgba(0, 0, 0, 0.7);
	width: 100%;
	height: 100%;
	position: fixed;
	top: 0;
	left: 0;
	display: flex;
	justify-content: center;
	align-items: center;
	z-index: 999;
	-webkit-user-select: none;
	-moz-user-select: none;
	-ms-user-select: none;
	user-select: none;
  }
  #overlay img {
	margin: 0;
	width: 80%;
	height: auto;
	-o-object-fit: contain;
	   object-fit: contain;
	padding: 5%;
  }
  @media screen and (min-width: 768px) {
	#overlay img {
	  width: 60%;
	}
  }
  @media screen and (min-width: 1200px) {
	#overlay img {
	  width: 50%;
	}
  }
  
  #nextButton {
	color: #fff;
	font-size: 2em;
	transition: opacity 0.8s;
  }
  #nextButton:hover {
	opacity: 0.7;
  }
  @media screen and (min-width: 768px) {
	#nextButton {
	  font-size: 3em;
	}
  }
  
  #prevButton {
	color: #fff;
	font-size: 2em;
	transition: opacity 0.8s;
  }
  #prevButton:hover {
	opacity: 0.7;
  }
  @media screen and (min-width: 768px) {
	#prevButton {
	  font-size: 3em;
	}
  }
  
  #launchButton {
	  position: absolute;
	  bottom: 10px;
	  align-content: center;
  }
  #exitButton {
	color: #fff;
	font-size: 2em;
	transition: opacity 0.8s;
	position: absolute;
	top: 15px;
	right: 15px;
  }
  #exitButton:hover {
	opacity: 0.7;
  }
  @media screen and (min-width: 768px) {
	#exitButton {
	  font-size: 3em;
	}
  }

  .loader {
	background: none no-repeat scroll 0 0 #232323;
	position: fixed;
	bottom: 0;
	left: 0;
	right: 0;
	top: 0;
	width: 100%;
	height: 100%;
	z-index: 9999; 
}

.loader .loader_inner {
	background-image: url("../../images/r-reach.gif");
	background-size: contain;
	background-repeat: no-repeat;
	background-position: center center;
	background-color: #232323;
	height: 100%;
	width: 100%;
	margin-top: -30px;
	margin-left: -30px;
	position: absolute; 
}

.noselect {
	-webkit-touch-callout: none; /* iOS Safari */
	  -webkit-user-select: none; /* Safari */
	   -khtml-user-select: none; /* Konqueror HTML */
		 -moz-user-select: none; /* Firefox */
		  -ms-user-select: none; /* Internet Explorer/Edge */
			  user-select: none; /* Non-prefixed version, currently
									supported by Chrome and Opera */
  }

